<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.createAcountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHederCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingRight="15dp"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/backLogin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primaryTextColor" />

            <TextView
                android:id="@+id/registroHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/white"
                android:text="Registro"
                android:textColor="@color/primaryTextColor"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@id/backLogin"
                app:layout_constraintStart_toEndOf="@+id/backLogin"
                app:layout_constraintTop_toTopOf="@id/backLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldNombre"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_nombre"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldApellido"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_apellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/txt_apellido" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldRut"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextEnabled="true"
                    app:helperText="Ej: 12345678-9"
                    app:backgroundTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_rut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/txt_rut" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/txt_email" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldContraseña"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:backgroundTint="@null"
                        android:hint="@string/txt_clave" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_confirma_contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:backgroundTint="@null"
                        android:hint="Confirmar" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <Button
                    android:id="@+id/boton_registro"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/blancoPantalla"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:text="@string/txt_boton_registrar" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</LinearLayout>